<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>state_space_response_viz</name>
  <version>0.1.0</version>
  <description>
    Source-agnostic playback of RobotTrajectory files (the framework's
    canonical motion-interchange format) into RViz: a player node publishes
    interpolated JointState frames with play/pause/seek/speed transport
    control. Consumes only the trajectory format — it does not care whether
    the trajectory came from a linear state-space simulation, a nonlinear
    simulator, or a recorded log.
  </description>
  <maintainer email="rahgirrafi@gmail.com">rahgirrafi</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>state_space_control</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
